RESOLVED FIXED57122
Fix compilation with Solaris 10/Sun Studio 12 CC : types must match on ?:
https://bugs.webkit.org/show_bug.cgi?id=57122
Summary Fix compilation with Solaris 10/Sun Studio 12 CC : types must match on ?:
Ben Taylor
Reported 2011-03-25 14:28:04 PDT
"loader/DocumentLoader.h", line 186: Error: Different types for "?:" (WebCore::String and WebCore::KURL). Sun Studio 12 expects types on a ?: expression to have the same types on both sides of the operation.
Attachments
Proposed patch which compiles correctly in qt-4.7.1 with webkit enabled on Solaris 10 with SS12 C++ compiler (3.53 KB, patch)
2011-03-25 14:35 PDT, Ben Taylor
no flags
Ben Taylor
Comment 1 2011-03-25 14:35:27 PDT
Created attachment 86983 [details] Proposed patch which compiles correctly in qt-4.7.1 with webkit enabled on Solaris 10 with SS12 C++ compiler Patch to fix compile on Solaris 10/Sun Studio 12 in qt-4.7.1 with webkit. Patch against webkit head. original version of this patch attributed to Thiago Macieira.
WebKit Commit Bot
Comment 2 2011-03-25 17:30:54 PDT
Comment on attachment 86983 [details] Proposed patch which compiles correctly in qt-4.7.1 with webkit enabled on Solaris 10 with SS12 C++ compiler Clearing flags on attachment: 86983 Committed r82010: <http://trac.webkit.org/changeset/82010>
WebKit Commit Bot
Comment 3 2011-03-25 17:30:59 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.