2011-03-25  Ben Taylor  <bentaylor.solx86@gmail.com>

Reviewed by Darin Adler.

        https://bugs.webkit.org/show_bug.cgi?id=57122. Solaris 10/SunStudio 12 expect
        both sides of a ?: operation to have the same types.  Extracted from original
        https://bugs.webkit.org/show_bug.cgi?id=24932, patch 13 of 17, and originally
        created by Thiago Macieira.

        fixes a compile issue on Solaris 10/SunStudio 12

        * loader/DocumentLoader.h:
        (WebCore::DocumentLoader::serverRedirectSourceForHistory):
        * loader/FrameLoader.cpp:
        (WebCore::FrameLoader::load):
        (WebCore::FrameLoader::loadWithNavigationAction):

Canonical link: https://commits.webkit.org/71817@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@82010 268f45cc-cd09-0410-ab3c-d52691b4dbfc